Dark mode bug fix

--- a/frontend/src/style/dark.scss
+++ b/frontend/src/style/dark.scss
@@ -1,6 +1,7 @@
 .app.dark {
   background-color: #111;
   color: rgb(156, 156, 156);
+  overflow: scroll;
 
   .chartGrid {
     stroke: rgba(228, 228, 228, 0.219);
